--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.6.0",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
